add user validation enable pass jwt and fix model

--- a/env.example
+++ b/env.example
@@ -10,3 +10,7 @@ LOG_LEVEL = Complete with level logger
 
 # Mogo-Database
 DATABASE_URL = Complete with url Database
+
+# auth Token
+AUTH_SECRET = Complete with key
+AUTH_TTL = Complete with time to live token
