--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
     "express-validator": "^6.14.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.5",
     "mongoose-paginate-v2": "^1.5.0",
     "mongoose-unique-validator": "^3.0.0",
