--- a/package.json
+++ b/package.json
@@ -5,12 +5,16 @@
   "main": "index.js",
   "scripts": {
     "dev": "npx nodemon src",
-    "start": "node src"
+    "start": "node src",
+    "test": "node ./postman/newman"
   },
   "keywords": [],
   "author": "Rodrigo",
   "license": "ISC",
   "devDependencies": {
+    "newman": "^5.3.1",
+    "newman-reporter-html": "^1.0.5",
+    "newman-reporter-htmlextra": "^1.22.4",
     "nodemon": "^2.0.15"
   },
   "dependencies": {
