add husky and test

--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
   "scripts": {
     "dev": "npx nodemon src",
     "start": "node src",
-    "test": "node ./postman/newman"
+    "test": "node ./postman/newman",
+    "prepare": "husky install"
   },
   "keywords": [],
   "author": "Rodrigo",
   "license": "ISC",
   "devDependencies": {
+    "husky": "^7.0.0",
     "newman": "^5.3.1",
     "newman-reporter-html": "^1.0.5",
     "newman-reporter-htmlextra": "^1.22.4",
